# desafio-store_api_python

./: .pre-commit-config.yaml  README.md  index.html  pyproject.toml
store/: main.py
store/controllers/: product.py
store/core/: config.py  exceptions.py
store/db/: mongo.py
store/schemas/: base.py  product.py
store/usecases/: product.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
